@@ -4,6 +4,8 @@ Koan CHANGELOG
 - Vmware installation hooks (experimental)
 - add --add-reinstall-entry option (see manpage)
 - request new URL locations
+- removed --autonet code since it did not work on Python 2.3 (resubmission welcome)
+- fixed XenFV support
 
 * Tue Feb 26 2008 Michael DeHaan <mdehaan@redhat.com> - 0.8.1-1
 - manpage updates
